# trapz_errors

./: LICENSE  README.md  calculate_error.py  pyproject.toml  reduce_error.py
example/: example.sh
integration_errors/: __init__.py  calculate_error.py  reduce_error.py
test/: basic_tests.py
trapz_errors/: __init__.py  calculate_error.py  helpers.py  reduce_error.py  trapz_errors.py
