[tool.poetry]
name = "trapz_errors"
version = "0.1.0"
description = "A tool to analyse errors associated with applying the Trapezoidal rule to uncertain data."
authors = ["Moritz R. Schäfer <schaefer@theochem.uni-stuttgart.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "integration_errors"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
scipy = "^1.11.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.280"
pytest = "^7.4.0"
coverage = "^7.2.7"
click = "^8.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
